# windows-offline-transcribe

./: .gitignore  AGENTS.md  Dockerfile.tests  LICENSE  README.md  capture-all.ps1  docker-compose.windows.yml  run.bat  setup-dev.ps1
.github/workflows/: windows-ci.yml
docs/: capture_demo.ps1  generate_charts.py
installer/: OfflineTranscription.iss
scripts/: DEVICE_TESTING.md  NOTICE  OfflineTranscription.sln  README.md  build-translation-deps.ps1  download-native-deps.ps1
scripts/installer/: OfflineTranscription.iss
scripts/src/OfflineTranscription/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OfflineTranscription.csproj  app.manifest
scripts/tests/OfflineTranscription.Tests/: ASRResultTests.cs  EngineFactoryTests.cs  EngineStateTests.cs  SessionFileManagerTests.cs  SherpaOnnxHelperTests.cs  StreamingChunkManagerTests.cs  SystemMetricsTests.cs  TranscriptionRecordTests.cs
src/OfflineTranscription/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OfflineTranscription.csproj
src/OfflineTranscription.NativeTranslation/: CMakeLists.txt  README.md  build.ps1  native_translation.cpp
tests/OfflineTranscription.Tests/: AssemblyInfo.cs  EngineFactoryTests.cs  EngineStateTests.cs  EvidenceSessionTests.cs  ModelDownloaderTests.cs  ModelInfoTests.cs  OfflineTranscription.Tests.csproj  SessionFileManagerTests.cs  SherpaOnnxHelperTests.cs  TextDeltaTests.cs  TranscriptionRecordTests.cs  WavWriterTests.cs  ZipExporterTests.cs
tools/Benchmark/: Benchmark.csproj  Program.cs
tools/export-qwen3-onnx/: export_qwen3_asr_onnx.py  requirements.txt
(+75 files in other folders)
